<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_general"
    android:orientation="vertical" >

    <!-- android:background="@color/gris_claro" -->

    <LinearLayout
        android:id="@+id/llTipoConfiguracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linearlayout_configuration_states"
        android:orientation="vertical"
        android:paddingBottom="@dimen/paddingBottomConfiguration"
        android:paddingLeft="@dimen/paddingLeftConfiguration"
        android:paddingTop="@dimen/paddingTopConfiguration" >

        <TextView
            android:id="@+id/textViewMTTipoConfiguracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mtTipoConfiguracion"
            android:textSize="@dimen/mt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewSTTipoConfiguracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stTipoConfiguracion"
            android:textSize="@dimen/st" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llConceptos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewGestionConceptos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dim_gray"
            android:paddingLeft="@dimen/paddingLeftConfiguration"
            android:text="@string/tvConceptos"
            android:textColor="@color/blanco"
            android:textSize="@dimen/st" />

        <LinearLayout
            android:id="@+id/llConceptosIngresos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/linearlayout_configuration_states"
            android:orientation="vertical"
            android:paddingBottom="@dimen/paddingBottomConfiguration"
            android:paddingLeft="@dimen/paddingLeftConfiguration"
            android:paddingTop="@dimen/paddingTopConfiguration" >

            <TextView
                android:id="@+id/textViewMTConceptosIngresos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mtIngresos"
                android:textSize="@dimen/mt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewSTConceptosIngresos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stIngresos"
                android:textSize="@dimen/st" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/lineView"
            android:background="#808080" />

        <LinearLayout
            android:id="@+id/llConceptosGastos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/linearlayout_configuration_states"
            android:orientation="vertical"
            android:paddingBottom="@dimen/paddingBottomConfiguration"
            android:paddingLeft="@dimen/paddingLeftConfiguration"
            android:paddingTop="@dimen/paddingTopConfiguration" >

            <TextView
                android:id="@+id/textViewMTConceptosGastos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mtGastos"
                android:textSize="@dimen/mt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewSTConceptosGastos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stGastos"
                android:textSize="@dimen/st" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llOtrasOpciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewOtrasOpciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dim_gray"
            android:paddingLeft="@dimen/paddingLeftConfiguration"
            android:text="@string/tvOtrasOpciones"
            android:textColor="@color/blanco"
            android:textSize="@dimen/st" />

        <LinearLayout
            android:id="@+id/llInformes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/linearlayout_configuration_states"
            android:orientation="vertical"
            android:paddingBottom="@dimen/paddingBottomConfiguration"
            android:paddingLeft="@dimen/paddingLeftConfiguration"
            android:paddingTop="@dimen/paddingTopConfiguration" >

            <TextView
                android:id="@+id/textViewMTOtrasOpciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mtInformes"
                android:textSize="@dimen/mt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewSTOtrasOpciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stInformes"
                android:textSize="@dimen/st" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/lineView"
            android:background="#808080" />

        <LinearLayout
            android:id="@+id/llMonedas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/linearlayout_configuration_states"
            android:orientation="vertical"
            android:paddingBottom="@dimen/paddingBottomConfiguration"
            android:paddingLeft="@dimen/paddingLeftConfiguration"
            android:paddingTop="@dimen/paddingTopConfiguration" >

            <TextView
                android:id="@+id/textViewMTMonedas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mtMonedas"
                android:textSize="@dimen/mt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewSTMonedas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stMonedas"
                android:textSize="@dimen/st" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dim_gray"
            android:paddingLeft="@dimen/paddingLeftConfiguration"
            android:text="@string/tvCopiaSeguridad"
            android:textColor="@color/blanco"
            android:textSize="@dimen/st" />

        <LinearLayout
            android:id="@+id/llDumpDB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/linearlayout_configuration_states"
            android:orientation="vertical"
            android:paddingBottom="@dimen/paddingBottomConfiguration"
            android:paddingLeft="@dimen/paddingLeftConfiguration"
            android:paddingTop="@dimen/paddingTopConfiguration" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mtDumpDB"
                android:textSize="@dimen/mt"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stDumpDB"
                android:textSize="@dimen/st" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/lineView"
            android:background="#808080" />

        <LinearLayout
            android:id="@+id/llLoadDB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/linearlayout_configuration_states"
            android:orientation="vertical"
            android:paddingBottom="@dimen/paddingBottomConfiguration"
            android:paddingLeft="@dimen/paddingLeftConfiguration"
            android:paddingTop="@dimen/paddingTopConfiguration" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mtLoadDB"
                android:textSize="@dimen/mt"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stLoadDB"
                android:textSize="@dimen/st" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/lineView"
            android:background="#808080" />
    </LinearLayout>

</LinearLayout>