<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_general"
    android:padding="5dip"
    android:orientation="vertical" >
    <!-- android:background="@drawable/listados_pestanya_background" -->
    <Spinner
        android:id="@+id/spinnerPestanyaIMensual"
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginBottom="5dip"
        />
    
    <ScrollView
        android:id="@+id/scrollViewPestanyaIMensual"
        android:layout_width="fill_parent"
    	android:layout_height="0dip"
    	android:layout_weight="1" 
        >
        
        <LinearLayout
            android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:orientation="vertical" >
        	
            <RelativeLayout
                android:id="@+id/relativeLayoutBarraListadoIngresosMensual" 
                android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
    			android:orientation="horizontal"
    			android:background="@drawable/listados_barra_ingresos" >
    			
                <ImageView
                    android:id="@+id/imageViewListadoIngresosMensual"
            		android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:padding="10dip"
        			android:layout_centerInParent="true"
        			android:layout_centerHorizontal="true"
        			android:layout_alignParentLeft="true"
            		android:contentDescription="@string/ivContentDescriptionListadoIngresos"
            		android:src="@android:drawable/arrow_down_float"
            	/>
                
            	<TextView 
	    			android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				android:layout_toRightOf="@id/imageViewListadoIngresosMensual"
    				android:layout_centerInParent="true"
    				android:text="@string/textViewListadoIngresos"
    				android:textColor="@color/ListadosNegro"
    				android:textSize="@dimen/text_medium" />
                
            </RelativeLayout>
            
            <!-- LinearLayout de CONTENIDO de INGRESOS -->
            <LinearLayout
                android:id="@+id/linearLayoutListadoIngresosMensual"
                android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
    			android:background="@drawable/listados_contenido_ingresos"
    			android:orientation="vertical" >
                
            </LinearLayout>
            
            <RelativeLayout 
                android:id="@+id/relativeLayoutBarraListadoGastosMensual"
                android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
    			android:orientation="horizontal"
    			android:background="@drawable/listados_barra_gastos" >
            	
                <ImageView
                    android:id="@+id/imageViewListadoGastosMensual"
            		android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:padding="10dip"
        			android:layout_centerInParent="true"
        			android:layout_alignParentLeft="true"
            		android:contentDescription="@string/ivContentDescriptionListadoGastos"
            		android:src="@android:drawable/arrow_down_float"
            	/>        		
        		
        		<TextView 
	    			android:layout_width="wrap_content"
    				android:layout_height="wrap_content"
    				android:layout_toRightOf="@id/imageViewListadoGastosMensual"
    				android:layout_centerInParent="true"
    				android:text="@string/textViewListadoGastos"
    				android:textColor="@color/ListadosNegro"
    				android:textSize="@dimen/text_medium" />
            
        	</RelativeLayout>
        	
            <!-- LinearLayout de CONTENIDO de GASTOS -->
            <LinearLayout
                android:id="@+id/linearLayoutListadoGastosMensual"
                android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
    			android:background="@drawable/listados_contenido_gastos"
    			android:orientation="vertical" >
                
            </LinearLayout>
        	
        </LinearLayout>
        
    </ScrollView>
    
    <!-- LinearLayout para los Totales y el Balance -->
	<LinearLayout
	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:paddingLeft="@dimen/pestanyaInformesTotalesPadding"
    	android:paddingTop="@dimen/pestanyaInformesTotalesPadding"
    	android:paddingBottom="@dimen/pestanyaInformesTotalesPadding"
    	android:orientation="vertical" >
	    
	    <LinearLayout 
	        android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal" >
	        
	        <TextView 
	            android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/total_ingresos"
    			android:textColor="@color/ListadosNegro"
    			android:textSize="@dimen/text_medium" />
	        
	        <TextView
	            android:id="@+id/textViewTotalIngresosMensual" 
	            android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text=""
    			android:textStyle="bold"
    			android:textSize="@dimen/text_medium" />
	        
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal" >
	        
	        <TextView 
	            android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/total_gastos"
    			android:textColor="@color/ListadosNegro"
    			android:textSize="@dimen/text_medium" />
	        
	        <TextView
	            android:id="@+id/textViewTotalGastosMensual" 
	            android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text=""
    			android:textStyle="bold"
    			android:textSize="@dimen/text_medium" />
	        
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal" >
	        
	        <TextView 
	            android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text="@string/total_balance"
    			android:textColor="@color/ListadosNegro"
    			android:textSize="@dimen/text_medium" />
	        
	        <TextView
	            android:id="@+id/textViewTotalBalanceMensual" 
	            android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:text=""
    			android:textStyle="bold"
    			android:textSize="@dimen/text_medium" />
	        
	    </LinearLayout>
	    
	</LinearLayout>

</LinearLayout>